Corrected the misaligned hostel's contents.

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -392,7 +392,7 @@ form button.btn-primary:hover {
   margin-bottom: 10px;
 }
 
-.post-content{
+.mess-details{
   text-align: center;
 }
 
